fixed the sizing of pages on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -142,6 +142,5 @@ hr:after
 main
 {
     max-width: 81ch;
-    min-width: 81ch;
     text-align: left;
 }
